Change a bunch of Guava functional classes to Java 8 native ones